# NojuAgent

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: agent.py  context.py  db.py  main.py
backend/app/api/: files.py  messages.py  projects.py  routes.py  ws.py
ui/: index.html  package.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Chat.tsx  CodeEditor.tsx  Dashboard.tsx  Header.tsx  Preview.tsx  WorkspacePanel.tsx
ui/src/lib/: previewFiles.ts  useAgent.ts  useMessages.ts  webcontainer.ts  webcontainerTools.ts
